--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@mui/material": "^5.16.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "web-vitals": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
